--- a/src/djangoplicity/newsletters/templates/newsletters/base.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/base.html
@@ -403,7 +403,7 @@
                                                                 <hr size="1" style="color: #bbbbbb; background-color: #bbbbbb; border: 0; height: 1px;" /> 
                                                                 </div>
                                                                 {% endblock %} 
-                                                                <div style="text-align:left;padding-top:5px;color:white;">
+                                                                <div style="text-align:left;padding-top:5px;color:white; background-color:#292929;">
                                                                 {% block footer_note %}{% endblock%} 
                                                                 <p style="font-size: 11px;">You are receiving this newsletter because {% block reason %}you subscribed to the ESO Outreach Community Newsletter.{% endblock %}</p> 
 																<p style="font-size: 11px; text-align:center;"><a href="*|UNSUB|*" style="color:white">Unsubscribe</a> | <a href="*|UPDATE_PROFILE|*" style="color:white">Subscription preferences</a> {% if enable_sharing %}| <a href="*|ARCHIVE|*" style="color:white">View in browser</a>{% endif %}</p>
