--- a/src/djangoplicity/newsletters/templates/newsletters/base.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/base.html
@@ -393,7 +393,7 @@
                                                     <tr><td colspan="3" style="background-color:#292929" height="5"></td></tr>
                                                     <tr> 
                                                         <td width="20" style="background-color:#292929">&nbsp;</td>
-                                                        <td valign="top" width="693"> 
+                                                        <td valign="top" width="693" style="background-color:#292929"> 
                                                             <div style="color: #707070;font-family: Helvetica, Arial;font-size: 10px;line-height: 125%;text-align: center;background-color:#292929; padding-top:5px;padding-bottom:0px;padding-left:0px;padding-right:0px;">
                                                             	{% block footer_potw %}
                                                                 {% for obj in data.footer_potws %}
