--- a/src/djangoplicity/newsletters/templates/newsletters/base2.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/base2.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
         <!-- Facebook sharing information tags -->
-        <meta property="og:title" content="{% block facebook_title %}ESO Outreach Community Newsletter July 2011{% endblock %}">
+        <meta property="og:title" content="{% block facebook_title %}{% endblock %}">
         
         <title>{% block html_title %}{% endblock %}</title>
 		
@@ -274,7 +274,7 @@
                                                 {% block text_only %}{% endblock %}
                                                 </div> 
                                             </td> 
-                                                                                </tr> 
+                                        </tr> 
                                         <tr> 
                                         	<td colspan="2" style="color: #505050;font-family: Helvetica, Arial;font-size: 10px;line-height: 100%; text-align:center;"><a href="*|UNSUB|*">Unsubscribe</a> | <a href="*|UPDATE_PROFILE|*">Subscription preferences</a> | <a href="*|ARCHIVE|*">View in browser</a></td> 
                                         </tr> 
