--- a/src/djangoplicity/newsletters/templates/newsletters/base_news.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/base_news.html
@@ -2,17 +2,17 @@
 {% load release_links  djangoplicity_datetime %}
 {% block text_only %}ESO {{data.release.release_type}} {{data.release.id}}{% block text_only_embargo %} (EMBARGOED* UNTIL {{data.release.release_date|time4lang:"en"|datetime:"DATETIME" }}){% endblock %}:  {{data.release.title}}{% if data.release.subtitle %} &mdash; {{data.release.subtitle}}{% endif %}. {{data.release.headline|striptags|truncatewords:40|safe}}<br /><br />{% endblock %}
 {% block html_title %}ESO Media Newsletter{% endblock %}
-{% block header_title %}<span style="color: #f4c819;">Advance Notice Newsletter</span>{% endblock %}
+{% block header_title %}<span style="color: #f4c819;">ESO Media Newsletter</span>{% endblock %}
 {% block header_subtitle %}{{data.release.release_date|date}}{% endblock %}
 
 {% block reason %} you subscribed to ESO &amp; ESA/Hubble Media Newsletter.{% endblock %}
 
 {% block main_image %}
 <tr> 
-<td colspan="2" class="headerContent" height="300px";  background="http://www.eso.org/public/archives/images/newsfeature/{{data.release.main_image.id}}.jpg" style="color: #202020;font-family: Helvetica, Arial;font-size: 24px;font-weight: bold;line-height: 100%;padding: 0;text-align: left;vertical-align: bottom;background-color:black;"> 
+<td colspan="2" class="headerContent" height="300px";  background="http://www.eso.org/public/images/download/{{data.release.main_image.newsfeature_image_token}}/newsfeature/{{data.release.main_image.id}}.jpg" style="color: #202020;font-family: Helvetica, Arial;font-size: 24px;font-weight: bold;line-height: 100%;padding: 0;text-align: left;vertical-align: bottom;background-color:black;"> 
 <!-- Outlook 2007 only -->
 <!--[if gte mso 9]>
-<img src="http://www.eso.org/public/archives/images/newsfeature/{{data.release.main_image.id}}.jpg" width="733" height="300" />
+<img src="http://www.eso.org/public/images/download/{{data.release.main_image.newsfeature_image_token}}/newsfeature/{{data.release.main_image.id}}.jpg" width="733" height="300" />
 <![endif]-->
 <div style="padding:20px;color:white;font-size:22px;">
 	<div style="font-size:14px;">
@@ -21,7 +21,7 @@
 	</span>
 	</div>
 	<span style="background:black;padding:2px;">
-		<a style="color:white;font-size:22px; text-decoration: none; font-weight: bold;" href="http://www.eso.org{{data.potws.mainimage.0.image.get_absolute_url}}">{{data.release.title}}{% if data.release.subtitle %}&mdash; {{data.release.subtitle}}{% endif %}</a>
+		<a style="color:white;font-size:22px; text-decoration: none; font-weight: bold;" href="http://www.eso.org{{data.release.get_absolute_url}}">{{data.release.title}}{% if data.release.subtitle %}&mdash; {{data.release.subtitle}}{% endif %}</a>
 	</span>
 	
 </div> 
