--- a/src/djangoplicity/newsletters/templates/admin/newsletters/newsletter/send_now_form.html
+++ b/src/djangoplicity/newsletters/templates/admin/newsletters/newsletter/send_now_form.html
@@ -27,6 +27,13 @@ window.__admin_media_prefix__ = "{% filter escapejs %}{% admin_media_prefix %}{%
 
 
 {% block content %}<div id="content-main">
+{% if original.send %}
+<fieldset class="module" style="background-color: #FFC; ">
+<div class="form-row">
+<p>Newsletter have already been sent.</p>
+</div>
+</fieldset>
+{% else %}
 <form action="." method="post" id="{{ opts.module_name }}_form">{% csrf_token %}{% block form_top %}{% endblock %}
 <div>
 {% if is_popup %}<input type="hidden" name="_popup" value="1" />{% endif %}
@@ -60,19 +67,6 @@ window.__admin_media_prefix__ = "{% filter escapejs %}{% admin_media_prefix %}{%
 <input type="submit" value="{% trans 'Send now!' %}" class="default" name="_generate" {{ onclick_attrib }}/>
 </div>
 
-
-{% block after_field_sets %}{% endblock %}
-
-{% for inline_admin_formset in inline_admin_formsets %}
-    {% include inline_admin_formset.opts.template %}
-{% endfor %}
-
-{% block after_related_objects %}{% endblock %}
-
-{% if adminform and add %}
-   <script type="text/javascript">document.getElementById("{{ adminform.first_field.id_for_label }}").focus();</script>
-{% endif %}
-
 </div>
 </form></div>
-{% endblock %}
+{% endif %}{% endblock %}
