--- a/src/djangoplicity/newsletters/templates/newsletters/outreach-text.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/outreach-text.html
@@ -1,19 +1,29 @@
-{% load djangoplicity_text_utils %}{{editorial|striptags|unescape|safe}}
+{% load djangoplicity_text_utils %}{{editorial_text|safe}}
 
 =================
 ESO ANNOUNCEMENTS
 =================
-{% for obj in announcements %}
+{% for obj in data.announcements %}
 *{{ obj.title|safe }}{% if obj.subtitle%} - {{ obj.subtitle|safe }}{% endif %}*
 
 {{ obj.release_date|date }}: {{ obj.description|striptags|truncatewords:50|unescape|safe }} [read more on http://www.eso.org{{ obj.get_absolute_url }}]
 {% endfor %}
 See latest ESO annoucements on http://www.eso.org/public/announcements/
 
+=========
+STARS@ESO
+=========
+{% for obj in data.starsateso reversed %}
+*{{ obj.title|safe }}*
+
+{{ obj.release_date|date }}: {{ obj.description|striptags|truncatewords:50|unescape|safe }} [read more on http://www.eso.org{{ obj.get_absolute_url }}]
+{% endfor %}
+See latest Stars@ESO on http://www.eso.org/public/events/starsateso.html
+
 =======
 ESOCAST
 =======
-{% for obj in esocasts %}
+{% for obj in data.esocasts %}
 *{{ obj.title|safe }}*
 
 {{ obj.release_date|date }}: {{ obj.headline|striptags|truncatewords:50|unescape|safe }} [view it on http://www.eso.org{{ obj.get_absolute_url }}]
@@ -23,7 +33,7 @@ View more ESOcasts on http://www.eso.org/public/videos/archive/category/esocast/
 ==================
 ESO PRESS RELEASES
 ==================
-{% for obj in releases %}
+{% for obj in data.releases %}
 *{{ obj.title|safe }}{% if obj.subtitle%} - {{ obj.subtitle|safe }}{% endif %}*
 {{ obj.release_date|date }}, read more on http://www.eso.org{{ obj.get_absolute_url }}
 {% endfor %}
@@ -32,48 +42,51 @@ More news available on http://www.eso.org/public/news/, including translations i
 ==============
 NEW ON ESO.ORG
 ==============
-{% for obj in newoneso %}
+{% for obj in data.newoneso %}
 *{{ obj.title|safe }}*
 {{ obj.link }}
 {% endfor %}
 ==============
 ONGOING EVENTS
 ==============
-{% for obj in ongoing_events %}
+{% for obj in data.ongoing_events %}
 *{{ obj.title|safe }}*
 {{ obj.link }}
 {% endfor %}
 ===============
 UPCOMING EVENTS
 ===============
-{% for obj in events %}
-* {{ obj.dates|unescape|safe }}: {{ obj.title|striptags|unescape|safe }}
+{% for obj in data.special_events.all %}
+* {{ obj.get_dates|unescape|safe }}: {{ obj.title|striptags|unescape|safe }}
 {% endfor %}
 See more on http://www.eso.org/public/events/special-evt.html
 
 ====================
 UPCOMING EXHIBITIONS
 ====================
-{% for obj in exhibitions %}
-* {{ obj.dates|unescape|safe }}: {{ obj.title|striptags|unescape|safe }}
+{% for obj in data.exhibitions.all %}
+* {{ obj.get_dates|unescape|safe }}: {{ obj.title|striptags|unescape|safe }}{% if obj.get_location %}. {{ obj.get_location }}.{%endif%}
 {% endfor %}
 See more on http://www.eso.org/public/events/exhibitions.html
 
 ========================
 ESO PICTURES OF THE WEEK 
 ========================
-{% for obj in potws %}
+
+* {{ data.potw.release_date|date }}: {{ data.potw.image.title|safe }}
+http://www.eso.org{{ data.potw.get_absolute_url }}
+{% for obj in data.footer_potws.all %}
 * {{ obj.release_date|date }}: {{ obj.image.title|safe }}
 http://www.eso.org{{ obj.get_absolute_url }}
 {% endfor %}
 See more on http://www.eso.org/public/images/potw/
 
----
+---{% if unsubscribe_link %}
 You are receiving this newsletter because you subscribed to the ESO Outreach Community Newsletter.
 
-Unsubscribe at *|UNSUB|*
-Change subscription preferences at *|UPDATE_PROFILE|*
-View newsletter in browser at *|ARCHIVE|*
+{% endif %}{% if unsubscribe_link %}Unsubscribe at {{unsubscribe_link}}
+{% endif %}{% if preferences_link %}Change subscription preferences at {{preferences_link}}
+{% endif%}{% if enable_sharing %}{% if browser_link %}View newsletter in browser at {{browser_link}}{% endif %}{% endif %}
 
 European Southern Observatory
 Karl-Schwarzschild-Str 2
