- Added stubs for new mailman (un)subscribe tasks. - Fixed minor template issues.

--- a/src/djangoplicity/newsletters/templates/newsletters/base.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/base.html
@@ -420,6 +420,7 @@
 	                                        						{% if browser_link and enable_sharing %}{% if unsubscribe_link or preferences_link %} | {%endif%} <a href="{{browser_link}}" style="color:white">View in browser</a>{% endif %}
 																</p>
 																{% endif %}
+																<p style="font-size: 11px; text-align:center;">Follow us on:</p>
 																<p style="font-size: 11px; text-align:center;"><img src="http://www.eso.org/public/archives/images/socialicons.png" style="border:0px;" usemap="#sociallinks"></img></p>
 																<p style="font-size: 11px; text-align:center; margin-bottom: 0px;">European Southern Observatory, Karl-Schwarzschild-Str 2, D-85748 Garching bei M&uuml;nchen, Germany</p>
 																<map id="sociallinks" name="sociallinks">
