--- a/src/djangoplicity/newsletters/templates/newsletters/outreach.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/outreach.html
@@ -6,7 +6,7 @@
 {% block header_title %}ESO Outreach Community Newsletter{% endblock %}
 {% block header_subtitle %}{{release_date|date:"F"}} {{release_date|date:"Y"}}{% endblock %}
 
-{% block reason %} you subscribed to the ESO Outreach &amp; Education Newsletter{% endblock %}
+{% block reason %} you subscribed to the ESO Outreach Community Newsletter{% endblock %}
 
 {% block content %}
 {{ editorial|safe }}
