- Fixed links to events.

--- a/src/djangoplicity/newsletters/templates/newsletters/includes/starsateso.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/starsateso.html
@@ -5,7 +5,7 @@
 <br/>
 
 <h2 class="h2" style="{{h2_style}}">
-<a style="color: #285A97;font-size: 15px;font-weight: bold; text-decoration:none;" href="http://www.eso.org/public/events/starsateso.html">Stars@ESO</a>
+<a style="color: #285A97;font-size: 15px;font-weight: bold; text-decoration:none;" href="http://www.eso.org/public/events/starsateso/">Stars@ESO</a>
 </h2> 
 {% for obj in data.starsateso %}
 <br />
