--- a/src/djangoplicity/newsletters/templates/newsletters/news2.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/news2.html
@@ -128,7 +128,7 @@ The ESO Education and Public Outreach Department</br>
 <hr style="{{hr_style}}"/> 
 
 <h3 class="h3" style="color: #285A97;display: block;font-family: Helvetica, Arial;font-size: 12px;font-weight: bold;line-height: 100%;margin-top: 10px;margin-right: 0;margin-bottom: 10px;margin-left: 0;text-align: left;">
-<a style="color: #285A97;font-size: 12px;font-weight: bold; text-decoration:none;" href="http://www.eso.org/public/events/special-evt.html">Upcoming Events</a>
+<a style="color: #285A97;font-size: 12px;font-weight: bold; text-decoration:none;" href="http://www.eso.org/public/events/special-evt/">Upcoming Events</a>
 </h3> 
 <div style="font-family: Helvetica, Arial;font-size: 12px;color:#505050;">
 
@@ -151,7 +151,7 @@ The ESO Education and Public Outreach Department</br>
 
 
 <h3 class="h3" style="color: #285A97;display: block;font-family: Helvetica, Arial;font-size: 12px;font-weight: bold;line-height: 100%;margin-top: 10px;margin-right: 0;margin-bottom: 10px;margin-left: 0;text-align: left;">
-<a style="color: #285A97;font-size: 12px;font-weight: bold; text-decoration:none;" href="http://www.eso.org/public/events/exhibitions.html">Upcoming Exhibitions</a>
+<a style="color: #285A97;font-size: 12px;font-weight: bold; text-decoration:none;" href="http://www.eso.org/public/events/exhibitions/">Upcoming Exhibitions</a>
 </h3> 
 
 
