--- a/src/djangoplicity/newsletters/templates/newsletters/base_news_text.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/base_news_text.html
@@ -59,7 +59,7 @@ Upcoming events
 {% for obj in data.special_events.all %}
 * {{ obj.get_dates|unescape|safe }}: {{ obj.title|striptags|unescape|safe }}
 {% endfor %}
-See more on http://www.eso.org/public/events/special-evt.html
+See more on http://www.eso.org/public/events/special-evt/
 
 {% endif %}{% if data.exhibitions %}====================
 Upcoming exhibitions
