--- a/src/djangoplicity/newsletters/templates/newsletters/includes/exhbitions.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/exhbitions.html
@@ -3,7 +3,7 @@
 
 
 <h3 class="h3" style="color: #285A97;display: block;font-family: Helvetica, Arial;font-size: 12px;font-weight: bold;line-height: 100%;margin-top: 10px;margin-right: 0;margin-bottom: 10px;margin-left: 0;text-align: left;">
-<a style="color: #285A97;font-size: 12px;font-weight: bold; text-decoration:none;" href="http://www.eso.org/public/events/exhibitions.html">Upcoming Exhibitions</a>
+<a style="color: #285A97;font-size: 12px;font-weight: bold; text-decoration:none;" href="http://www.eso.org/public/events/exhibitions/">Upcoming Exhibitions</a>
 </h3> 
 
 
