--- a/src/djangoplicity/newsletters/templates/newsletters/base_news_text.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/base_news_text.html
@@ -67,7 +67,7 @@ Upcoming exhibitions
 {% for obj in data.exhibitions.all %}
 * {{ obj.get_dates|unescape|safe }}: {{ obj.title|striptags|unescape|safe }}{% if obj.get_location %}. {{ obj.get_location }}.{%endif%}
 {% endfor %}
-See more on http://www.eso.org/public/events/exhibitions.html
+See more on http://www.eso.org/public/events/exhibitions/
 {% endif%}{% endif %}
 ---{% if unsubscribe_link %}
 You are receiving this newsletter because you subscribed to ESO News.
