--- a/src/djangoplicity/newsletters/templates/newsletters/includes/special_events.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/special_events.html
@@ -1,20 +1,19 @@
-{# ############### EVENTS ############### #}
-<hr style="{{hr_style}}"/> 
-
+{% if ongoing_events or special_events %}
 <h3 class="h3" style="color: #285A97;display: block;font-family: Helvetica, Arial;font-size: 12px;font-weight: bold;line-height: 100%;margin-top: 10px;margin-right: 0;margin-bottom: 10px;margin-left: 0;text-align: left;">
-<a style="color: #285A97;font-size: 12px;font-weight: bold; text-decoration:none;" href="http://www.eso.org/public/events/special-evt/">Upcoming Events</a>
+<a style="color: #285A97;font-size: 12px;font-weight: bold; text-decoration:none;" href="{{events_url}}">Upcoming Events</a>
 </h3> 
 <div style="font-family: Helvetica, Arial;font-size: 12px;color:#505050;">
-{% if data.ongoing_events %}
+{% if ongoing_events %}
 <p><strong>Ongoing</strong><br> 
 <ul> 
-{% for obj in data.ongoing_events %}
+{% for obj in ongoing_events %}
 <li><a href="{{obj.link}}">{{obj.title}}</a></li>
 {% endfor %}
 </ul> 
 </p>
 {% endif %} 
-{% for obj in data.special_events %}
+{% for obj in special_events %}
 <p><strong>{{ obj.get_dates|safe }}</strong>: {% if obj.link %}<a href="{{obj.link}}">{{obj.title|safe}}</a>{% else %}{{obj.title|safe}}{% endif %}</p>
 {% endfor %}
 </div>
+{% endif %}
